<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatchCenter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_activity_teams">Команды</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_match_screen">MatchScreen</string>
    <string name="title_section3">Статистика</string>
    <string name="title_section2">События</string>
    <string name="title_section1">Составы</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="title_activity_main_menu">MatchCenter</string>
    <string name="action_settings">Settings</string>
    <string name="Continue">Продолжить</string>
    <string name="newmatch">Новый матч</string>
    <string name="allmatches">Матчи</string>
    <string name="players">Игроки</string>
    <string name="teams">Команды</string>
    <string name="statistic">Статистика</string>
    <string name="register">Реестр</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="title_activity_new_match_params">Настройки нового матча</string>
    <string name="homeTeam">Команда хозяев:</string>
    <string name="takechoose">Выбрать</string>
    <string name="away_team">Команда гостей:</string>
    <string name="beginMatch">Начать игру</string>
    <string name="title_activity_match_scree_activity_new">MatchScreeActivity_new</string>
    <string name="exit_dlg_title">Выход</string>
    <string name="exit_dlg_question">Выйти из приложения?</string>
    <string name="exit_dlg_yes">Да</string>
    <string name="exit_dlg_no">Нет</string>
    <string name="title_activity_match_screen_activity_swipe">MatchScreenActivitySwipe</string>
    <string name="test_homeTeam_longname">Челси</string>
    <string name="test_homeTeam_shortname">Челси</string>
    <string name="test_awayTeam_longname">Манчестер Юнайтед</string>
    <string name="test_awayTeam_shortname">Ман.Юн.</string>
    <string name="test_player1_firstname">Фрэнк</string>
    <string name="test_player1_lastname">Лэмпард</string>
    <string name="test_player2_firstname">Джон</string>
    <string name="test_player2_lastname">Терри</string>
    <string name="test_player3_firstname">Петер</string>
    <string name="test_player3_lastname">Чех</string>
    <string name="test_player4_firstname">Райан</string>
    <string name="test_player4_lastname">Гигз</string>
    <string name="test_player5_firstname">Уэйн</string>
    <string name="test_player5_lastname">Руни</string>
    <string name="test_player6_firstname">Рио</string>
    <string name="test_player6_lastname">Фердинанд</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_match">Экран матча</string>
    <string name="event_editor_dlg_save">Сохранить</string>
    <string name="event_editor_dlg_cancel">Отмена</string>
    <string name="event_editor_dlg_title">Редактор события</string>
    <string name="squad_editor_dlg_title">Редактор заявки на матч</string>
    <string name="event_editor_dlg_time">Время:</string>
    <string name="event_editor_dlg_team">Команда:</string>
    <string name="event_editor_dlg_player_author">Автор:</string>
    <string name="event_editor_dlg_player_assist">Ассистент:</string>
    <string name="event_editor_dlg_type">Тип:</string>
    <string name="event_editor_dlg_comment">Комментарий:</string>
    <string name="event_type_goal">Гол</string>
    <string name="event_type_owngoal">Гол в свои ворота</string>
    <string name="event_type_shootin">Удар в створ</string>
    <string name="event_type_shootout">Удар мимо ворот</string>
    <string name="event_type_yellow">Желтая карточка</string>
    <string name="event_type_red">Красная карточка</string>
    <string name="event_type_comment">Комментарий</string>
    <string name="event_type_freekick">Гол со штрафного удара</string>
    <string name="event_type_penalty">Гол с пенальти</string>
    <string name="event_type_nogoal_penalty_out">Не забит гол с пенальти (мимо)</string>
    <string name="event_type_nogoal_penalty_goalkeeper">Не забит гол с пенальти (вратарь)</string>
    <string name="event_type_corner">Угловой удар</string>
    <string name="event_type_foul">Фол</string>
    <string name="register_item_editor_firstname">Имя:</string>
    <string name="register_item_editor_lastname">Фамилия:</string>
    <string name="register_item_editor_team">Команда:</string>
    
</resources>
