<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_backround"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonContinueMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue" />

        <Button
            android:id="@+id/buttonNewMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newmatch" />

        <Button
            android:id="@+id/buttonAllMatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allmatches" />

        <Button
            android:id="@+id/buttonPlayers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/players" />

        <Button
            android:id="@+id/buttonTeams"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/teams" />

        <Button
            android:id="@+id/buttonStat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistic" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />

    </LinearLayout>

</RelativeLayout>