<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_backround"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
     >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollY="0px"
         >
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:orientation="horizontal" >
     
	        <TextView
	            android:id="@+id/twEventEditor_Time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/event_editor_dlg_time"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/twEventEditor_TimeValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="00:00"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
             
        <TextView
            android:id="@+id/twEventEditor_EventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_editor_dlg_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <RadioGroup
        android:id="@+id/rgEventType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	        <RadioButton
	            android:id="@+id/radioButtonGoal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/event_type_goal" />
	
	        <RadioButton
	            android:id="@+id/radioButtonOwnGoal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="left|center_vertical"
	            android:text="@string/event_type_owngoal" />
	        <RadioButton
	            android:id="@+id/radioButtonFreeKick"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="left|center_vertical"
	            android:text="@string/event_type_freekick" />
	        
	        <RadioButton
	            android:id="@+id/radioButtonPenalty"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="left|center_vertical"
	            android:text="@string/event_type_penalty" />
	        
	        <RadioButton
	            android:id="@+id/radioButtonPenaltyNoGoalKeeper"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="left|center_vertical"
	            android:text="@string/event_type_nogoal_penalty_goalkeeper" />
	        	        	        
	        <RadioButton
	            android:id="@+id/radioButtonPenaltyNoGoalOut"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="left|center_vertical"
	            android:text="@string/event_type_nogoal_penalty_out" />
	        
	        <RadioButton
	            android:id="@+id/radioButtonShootIn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/event_type_shootin" />
	
	        <RadioButton
	            android:id="@+id/radioButtonShootOut"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/event_type_shootout" />

	        <RadioButton
	            android:id="@+id/radioButtonFoul"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/event_type_foul"/>
	        
	        <RadioButton
	            android:id="@+id/radioButtonYelCard"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/event_type_yellow"
	            android:textColor="@color/card_yellow" />
	
	        <RadioButton
	            android:id="@+id/radioButtonRedCard"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/event_type_red"
	            android:textColor="@color/card_red" />
        
	</RadioGroup>
	
        <TextView
            android:id="@+id/twEventEditorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_editor_dlg_team"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
	 <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:orientation="horizontal" >
	        
    		<RadioGroup
		        android:id="@+id/rgTeams"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
        
		        <RadioButton
		            android:id="@+id/radioButtonHomeTeam"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"
		            android:text="RadioButton" />
		
		        <RadioButton
		            android:id="@+id/radioButtonAwayTeam"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:text="RadioButton" />
			</RadioGroup>
			
        </LinearLayout>

        <TextView
            android:id="@+id/twEventEditorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_editor_dlg_player_author"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/buttonChoosePlayerAthor"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:text="@string/takechoose" />

        <TextView
            android:id="@+id/textViewAwayTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_editor_dlg_player_assist"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonChoosePlayerAssist"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takechoose" />
        
	<LinearLayout
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
		android:layout_gravity="center"
		android:layout_weight="1"
        android:orientation="horizontal" >            
        <Button
	        android:id="@+id/btEventEditorDialogOK"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/event_editor_dlg_save" />
        <Button
	        android:id="@+id/btEventEditorDialogCancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/event_editor_dlg_cancel" />
	</LinearLayout>            

		
    </LinearLayout>    
    </ScrollView>
    
</LinearLayout>