<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_backround"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

	<TextView
         android:id="@+id/twFirstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_item_editor_firstname"
         android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/etFirstName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:inputType="textPersonName" >

	    <requestFocus />
	</EditText>
	    
     <TextView
         android:id="@+id/twLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_item_editor_lastname"
         android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/etLastName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:inputType="textPersonName" >
	</EditText>
	
     <TextView
         android:id="@+id/twTeam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_item_editor_team"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <Button
         android:id="@+id/btChooseTeam"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="48dp"
         android:text="@string/takechoose" />
		
	<LinearLayout
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
		android:layout_gravity="center"
		android:layout_weight="1"
        android:orientation="horizontal" >            
        <Button
	        android:id="@+id/btEventEditorDialogOK"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/event_editor_dlg_save" />
        <Button
	        android:id="@+id/btEventEditorDialogCancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/event_editor_dlg_cancel" />
	</LinearLayout>            

		
    </LinearLayout>    
    
</LinearLayout>