<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_backround"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewMatchParamsActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHomeTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeTeam"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonChooseHomeTeam"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:text="@string/takechoose" />

        <TextView
            android:id="@+id/textViewAwayTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/away_team"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonChooseAwayTeam"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takechoose" />

        <Button
            android:id="@+id/buttonBeginMatch"
            style="@style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginMatch" />

    </LinearLayout>

</RelativeLayout>